fixed the back to dashboard button and the add recipe button